--- a/mid/catkin_ws/src/localization_309605008/package.xml
+++ b/mid/catkin_ws/src/localization_309605008/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>pkg</name>
+  <name>localization_309605008</name>
   <version>0.0.0</version>
-  <description>The pkg package</description>
+  <description>The localization_309605008 package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
